00_psd2web/00-01_primeone/#src/styles/style.scss
/* Fonts */
@font-face {
	font-family: 'Bebas';
	src: url('../fonts/BebasNeue Regular.eot');
	src: local('☺'), url('../fonts/BebasNeue Regular.woff') format('woff'),
		url('../fonts/BebasNeue Regular.ttf') format('truetype'),
		url('../fonts/BebasNeue Regular.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'Akzidenz Grotesk BQ - Bd Cnd';
	src: url('../fonts/AkzidenzGrotesk-BoldCond.eot');
	src: local('☺'), url('../fonts/AkzidenzGrotesk-BoldCond.woff') format('woff'),
		url('../fonts/AkzidenzGrotesk-BoldCond.ttf') format('truetype'),
		url('../fonts/AkzidenzGrotesk-BoldCond.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
/* Start Reset */
* {
	padding: 0;
	margin: 0;
	border: 0;
}

*,
*:before,
*:after {
	box-sizing: border-box;
}

:focus,
:active {
	outline: none;
}

a:focus,
a:active {
	outline: none;
}

nav,
footer,
header,
aside {
	display: block;
}

html,
body {
	height: 100%;
	width: 100%;
	font-size: 100%;
	line-height: 1;
	font-size: 14px;
	-ms-text-size-adjust: 100%;
	-moz-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%;
}

input,
button,
textarea {
	font-family: inherit;
}

input::-ms-clear {
	display: none;
}

button {
	cursor: pointer;
}

button::-moz-focus-inner {
	padding: 0;
	border: 0;
}

a,
a:visited {
	text-decoration: none;
}

a:hover {
	text-decoration: none;
}

ul li {
	list-style: none;
}

img {
	vertical-align: top;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-size: inherit;
	font-weight: inherit;
}

/* End Reset */

/* Header */
.wrap {
}
.header {
	padding: 29px 0 33px 0;
	max-width: 880px;
	margin: 0 auto;
}
.container {
}
.header-top {
	display: flex;
	font-size: 0;
	justify-content: space-between;

	// .header-top__link
	&__link {
		color: #000000;
		font-family: 'Akzidenz Grotesk BQ - Bd Cnd';
		font-size: 15px;
		font-weight: 400;
		text-transform: uppercase;
		text-decoration: underline;
	}
}
.header-top-lang {
	// .header-top-lang__item
	&__item {
		display: inline-block;
		padding: 2px;
		margin: 0 16px 0 0;
		text-transform: uppercase;
		letter-spacing: 1px;
		color: #000000;
		font-size: 15px;
		font-family: 'Bebas';
		text-decoration: underline;

		// .header-top-lang__item:hover
		&:hover {
			color: #ffffff;
			background-color: #000000;
			text-decoration: none;
		}
	}
}
.active {
	color: #ffffff;
	background-color: #000000;
	text-decoration: none;
}
.header-bottom {
	display: flex;
	font-size: 0;
	justify-content: space-between;
	align-items: center;
	margin-top: -15px;

	// .header-bottom__column
	&__column {
	}
}
.header-bottom-menu {
	// .header-bottom-menu__link
	&__link {
		color: #000000;
		font-family: 'Akzidenz Grotesk BQ - Bd Cnd';
		font-size: 15px;
		font-weight: 400;
		text-transform: uppercase;
		letter-spacing: 1.5px;
	}
}
.header-bottom-menu-list {
	li {
		display: inline-block;
		padding-right: 46px;
		&:last-child {
			padding-right: 0;
		}
	}
}
.header-logo {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	text-align: center;

	// .header-logo__text
	&__text {
		color: #000000;
		font-family: 'Bebas';
		font-size: 10px;
		font-weight: 400;
		text-transform: uppercase;
		letter-spacing: 8px;
		span {
			letter-spacing: 2.72px;
		}
	}

	// .header-logo__img
	&__img {
		padding: 10px 0;
	}
}
.content {
	font-family: 'PT Sans', sans-serif;
}

/* Private */
.private {
	width: 100%;
	display: flex;
	margin: 0px 0px 75px 0px;
	// .private__column
	&__column {
		flex: 0 0 50%;
		background-color: #000;
	}
}
.ibg {
	background: no-repeat center/cover url('../img/private_ibg.jpg');
	height: 100%;
}
.private-body {
	max-width: 305px;
	margin: 80px 0 75px 60px;
	// .private-body__title
	&__title {
		color: #ffffff;
		font-family: 'Akzidenz Grotesk BQ - Bd Cnd';
		font-size: 50px;
		font-weight: 400;
		line-height: 50px;
		text-transform: uppercase;
		letter-spacing: 5px;
		margin: 0 0 37px 0;
	}

	// .private-body__text
	&__text {
		color: #ffffff;
		font-family: 'PT Sans', sans-serif;
		font-size: 15px;
		font-weight: 400;
		line-height: 25px;
		margin: 0 0 73px 0;
	}
}
.private-body-links {
	// .private-body-links__btn
	&__btn {
		display: inline-block;
		color: #000000;
		background-color: #ffffff;
		font-family: 'Bebas';
		font-size: 15px;
		font-weight: 400;
		line-height: 25px;
		text-transform: uppercase;
		letter-spacing: 1.5px;
		height: 50px;
		line-height: 50px;
		padding: 0 33px;
	}

	// .private-body-links__link
	&__link {
		color: #fffffe;
		font-family: 'Bebas';
		font-size: 15px;
		font-weight: 400;
		line-height: 25px;
		text-decoration: underline;
		text-transform: uppercase;
		letter-spacing: 1.5px;
		margin: 0 0 0 15px;
	}
}
/* Products */
.products {
	max-width: 880px;
	margin: 0 auto 75px auto;
	display: flex;
	justify-content: space-between;
	// .products__column
	&__column {
	}
}
.card {
	// .card__header
	&__header {
	}

	// .card__figure
	&__figure {
	}

	// .card__image
	&__image {
		width: 220px;
		height: 100%;
	}

	// .card__body
	&__body {
		margin: 25px 0 0 0;
	}

	// .card__title
	&__title {
		width: 121px;
		color: #000000;
		font-family: 'Akzidenz Grotesk BQ - Bd Cnd';
		font-size: 25px;
		font-weight: 400;
		line-height: 25px;
		text-transform: uppercase;
		letter-spacing: 2.5px;
	}

	// .card__text
	&__text {
		margin: 36px 0 0 0;
		max-width: 185px;
		color: #000000;
		font-family: 'PT Sans';
		font-size: 15px;
		font-weight: 400;
		line-height: 25px;
	}

	// .card__footer
	&__footer {
		margin: 32px 0 0 0;
	}
}
.card-actions {
	// .card-actions__btn
	&__btn {
		display: inline-block;
		color: #ffffff;
		background-color: #000000;
		font-family: 'Bebas';
		font-size: 15px;
		font-weight: 400;
		line-height: 25px;
		text-transform: uppercase;
		letter-spacing: 1.5px;
		height: 50px;
		line-height: 50px;
		padding: 0 33px;
	}

	// .card-actions__link
	&__link {
		display: block;
		margin: 29px 0 0 0;
		color: #000000;
		font-family: Bebas;
		font-size: 15px;
		font-weight: 400;
		line-height: 25px;
		text-decoration: underline;
		text-transform: uppercase;
		letter-spacing: 1.5px;
	}
}

